# Rust-Chat

./: stack.txt
rust-chat/: .gitignore  Cargo.toml  Rocket.toml
rust-chat/migrations/: 20250721142638_create_chat_tables.sql
rust-chat/public/: index.html
rust-chat/src/: config.rs  main.rs  state.rs
rust-chat/src/handlers/: auth.rs  chat.rs  guard.rs  mod.rs
rust-chat/src/models/: mod.rs
rust-chat/src/websocket/: commands.rs  handler.rs  mod.rs
