[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_ws = "0.1.1"

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# WebSocket support
tokio-tungstenite = "0.27"
tungstenite = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11.8"

# Concurrency primitives
dashmap = "6.1.0"
tokio-stream = "0.1"

# Future utilities
futures-util = "0.3"

chrono = { version = "0.4", features = ["serde"] }