[package]
name = "chat-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
rocket = { version = "0.5.1", features = ["json", "tls"] }
rocket_ws = "0.1.1"

# Async runtime
tokio = { version = "1.38", features = ["full"] }

# WebSocket support
tokio-tungstenite = "0.27"
tungstenite = "0.27"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
log = "0.4"
env_logger = "0.11.8"

# Concurrency primitives
dashmap = "6.1.0"
tokio-stream = "0.1"

# Future utilities
futures-util = "0.3"

chrono = { version = "0.4", features = ["serde"] }

sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
argon2 = "0.5.3"
rand_core = "0.9.3"
thiserror = "2.0.12"
password-hash = "0.5.0"
jwt = "0.16.0"
jsonwebtoken = "9.3.1"
